--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                 <div id="containerCarrito">
                     <div class="tituloCarrito fw-bold">Carrito de compras</div>
                     <button id="vaciarCarrito">Vaciar carrito</button>
-                    <div id="listaCarrito"></div>
+                    <div id="listaCarritoDiv">
+                        <ul id="listaCarrito"></ul>
+                    </div>
+                    <div id="totalCarrito"></div>
                 </div>
             </div>
         </aside>
