--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="tituloCarrito fw-bold">Carrito de compras</div>
                     <button id="vaciarCarrito">Vaciar carrito</button>
                     <div id="listaCarritoDiv">
-                        <ul id="listaCarrito">  </ul>
+                        <ul id="listaCarrito"></ul>
                     </div>
                     <div id="totalCarrito"></div>
                 </div>
@@ -56,3 +56,5 @@
     <script src="./app.js"></script>
 </body>
 </html>
+
+<button id="agregar" class="myButton"></button>
