Despues de tabla OK

--- a/index.html
+++ b/index.html
@@ -42,8 +42,18 @@
                 <div id="containerCarrito">
                     <div class="tituloCarrito fw-bold">Carrito de compras</div>
                     <button id="vaciarCarrito">Vaciar carrito</button>
-                    <div id="listaCarritoDiv">
-                        <ul id="listaCarrito"></ul>
+                    <div>
+                        <table class="blueTable" id="listaCarritoDiv">
+                            <thead>
+                                <tr>
+                                <th>Cantidad</th>
+                                <th>Cerveza</th>
+                                <th>Subtotal</th>
+                                </tr>
+                            </thead>
+                            <tbody id="listaCarrito">
+                            </tbody>
+                        </table>
                     </div>
                     <div id="totalCarrito"></div>
                 </div>
