--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                         </table>
                     </div>
                     <div id="totalCarrito"></div>
+                    <button id="finCompra">Finalizar compra</button>
                 </div>
             </div>
         </aside>
@@ -67,7 +68,7 @@
         <div></div>
     </div>
 
-
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="./app.js"></script>
 </body>
